# tottle-types

./: README.md  pyproject.toml
schema_generator/: __main__.py  enums.py  generator.py  parser.py  template.py
schema_generator/base_types/: any_of.py  array.py  description.py  name.py  reference.py
schema_generator/body/: body.py  recent_changes.py  version.py
schema_generator/methods/: argument.py  method.py  return_type.py
schema_generator/objects/: object.py  property.py
schema_generator/templates/: object.py.jinja2
schema_generator/utils/: format.py  imports.py  wrap.py
v2/: run.py
v2/schema_generator/: any_of.py  array.py  enums.py  generator.py
v2/schema_generator/body/: body.py
v2/schema_generator/methods/: argument.py  array.py  base.py  const.py  method.py  return_type.py  utils.py
v2/schema_generator/objects/: const.py  object.py  property.py  utils.py
v2/schema_generator/utils/: format.py  imports.py  wrap.py
